--- a/mother_board/.cproject
+++ b/mother_board/.cproject
@@ -61,7 +61,7 @@
 							<tool id="com.crt.advproject.link.exe.debug.386306012" name="MCU Linker" superClass="com.crt.advproject.link.exe.debug">
 								<option id="com.crt.advproject.link.arch.136510823" name="Architecture" superClass="com.crt.advproject.link.arch" value="com.crt.advproject.link.target.cm3" valueType="enumerated"/>
 								<option id="com.crt.advproject.link.thumb.666056326" name="Thumb mode" superClass="com.crt.advproject.link.thumb" value="true" valueType="boolean"/>
-								<option id="com.crt.advproject.link.script.686457308" name="Linker script" superClass="com.crt.advproject.link.script" value="periph_uart_rb_Debug.ld" valueType="string"/>
+								<option id="com.crt.advproject.link.script.686457308" name="Linker script" superClass="com.crt.advproject.link.script" value="mother_board_Debug.ld" valueType="string"/>
 								<option id="com.crt.advproject.link.manage.812720429" name="Manage linker script" superClass="com.crt.advproject.link.manage" value="true" valueType="boolean"/>
 								<option id="gnu.c.link.option.nostdlibs.365118308" name="No startup or default libs (-nostdlib)" superClass="gnu.c.link.option.nostdlibs" value="true" valueType="boolean"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.link.option.other.1259972280" name="Other options (-Xlinker [option])" superClass="gnu.c.link.option.other" valueType="stringList">
@@ -149,7 +149,7 @@
 							<tool id="com.crt.advproject.link.exe.release.679425267" name="MCU Linker" superClass="com.crt.advproject.link.exe.release">
 								<option id="com.crt.advproject.link.arch.2006994956" name="Architecture" superClass="com.crt.advproject.link.arch" value="com.crt.advproject.link.target.cm3" valueType="enumerated"/>
 								<option id="com.crt.advproject.link.thumb.1024753905" name="Thumb mode" superClass="com.crt.advproject.link.thumb" value="true" valueType="boolean"/>
-								<option id="com.crt.advproject.link.script.201431624" name="Linker script" superClass="com.crt.advproject.link.script" value="periph_uart_rb_Release.ld" valueType="string"/>
+								<option id="com.crt.advproject.link.script.201431624" name="Linker script" superClass="com.crt.advproject.link.script" value="mother_board_Release.ld" valueType="string"/>
 								<option id="com.crt.advproject.link.manage.1291170678" name="Manage linker script" superClass="com.crt.advproject.link.manage" value="true" valueType="boolean"/>
 								<option id="gnu.c.link.option.nostdlibs.1520984888" name="No startup or default libs (-nostdlib)" superClass="gnu.c.link.option.nostdlibs" value="true" valueType="boolean"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="gnu.c.link.option.other.985483997" name="Other options (-Xlinker [option])" superClass="gnu.c.link.option.other" valueType="stringList">
